--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("juliamono.css");
 
 /*  */
 
 jltree,
 jlpair {
-    font-family: "Roboto Mono", monospace;
+    font-family: JuliaMono, JuliaMono-Latin, monospace;
     font-size: 0.75rem;
 }
 jltree {
@@ -160,7 +161,7 @@ jlerror > header > p:first-child {
 jlerror > section > ol > li > mark {
     background: #f3f2f1;
     border-radius: 6px;
-    font-family: "Roboto Mono", monospace;
+    font-family: JuliaMono, JuliaMono-Latin, monospace;
 }
 jlerror > section > ol > li > em > a {
     background: #f5efd9;
