--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -934,12 +934,15 @@ pluto-input > button > span {
 
 @media screen and (any-pointer: coarse) {
     pluto-cell > button,
-    pluto-input > button,
-    pluto-shoulder > button,
-    pluto-cell > pluto-runarea {
+    pluto-cell > pluto-runarea
+    {
         opacity: 0;
         /* to make it feel smooth: */
         transition: opacity 0.25s ease-in-out;
+    }
+    pluto-input > button,
+    pluto-shoulder > button {
+        opacity: 0.25;
     }
     pluto-cell:focus-within > button,
     pluto-cell:focus-within > pluto-input > button,
