--- a/frontend/juliamono.css
+++ b/frontend/juliamono.css
@@ -1,15 +1,23 @@
-@font-face {
+/* @font-face {
     font-family: JuliaMono;
     src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.013/webfonts/JuliaMono-Light.woff2") format("woff2");
     font-display: swap;
-    font-weight: 300;
-}
+    font-weight: 200;
+} */
 
 @font-face {
     font-family: JuliaMono;
     src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.013/webfonts/JuliaMono-Regular.woff2") format("woff2");
     font-display: swap;
-    font-weight: 500;
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: JuliaMono;
+    src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.013/webfonts/JuliaMono-RegularLatin.woff2") format("woff2");
+    font-display: swap;
+    font-weight: 400;
+    unicode-range: U+00-7F; /* Basic Latin characters */
 }
 
 @font-face {
@@ -18,18 +26,10 @@
     font-display: swap;
     font-weight: 700;
 }
-
+/* 
 @font-face {
     font-family: JuliaMono;
     src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.013/webfonts/JuliaMono-ExtraBold.woff2") format("woff2");
     font-display: swap;
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: JuliaMono;
-    src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.013/webfonts/JuliaMono-RegularLatin.woff2") format("woff2");
-    font-display: swap;
-    font-weight: 500;
-    unicode-range: U+00-7F; /* Basic Latin characters */
-}
+    font-weight: 900;
+} */
