--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -809,7 +809,6 @@ pluto-trafficlight {
     border-bottom-left-radius: 4px;
     border-left-color: rgba(0, 0, 0, 0.1);
     background: rgba(0, 0, 0, 0.1);
-    transition: background 0.05s ease-in;
 }
 
 /* in ascending order of severity: */
@@ -830,88 +829,76 @@ pluto-cell:focus-within > pluto-trafficlight {
     border-left-style: solid;
     margin-left: -4px;
     background-clip: content-box;
-    transition: background 0.05s ease-in;
 }
 
 pluto-cell.selected > pluto-trafficlight {
     background: rgba(40, 78, 189, 0.4);
     border-left-color: rgba(40, 78, 189, 0.4);
     background-clip: content-box;
-    transition: background 0.05s ease-in;
 }
 
 pluto-cell.code_differs > pluto-trafficlight {
     background: hsla(46, 70%, 37%, 0.68);
     border-left-color: hsla(46, 70%, 37%, 0.68);
     background-clip: content-box;
-    transition: background 0.05s ease-in;
 }
 
 pluto-cell.errored > pluto-trafficlight {
-    background: hsl(0, 100%, 71%);
-    border-left-color: hsl(0, 100%, 71%);
+    background: hsla(0, 70%, 80%, 0.7);
+    border-left-color: hsla(0, 70%, 80%, 0.7);
     background-clip: content-box;
-    transition: background 0.05s ease-in;
 }
 
 pluto-cell.queued > pluto-trafficlight {
     background: repeating-linear-gradient(
         -45deg,
-        hsla(20, 20%, 75%, 1), 
-        hsla(20, 20%, 75%, 1) 8px, 
-        hsla(20, 20%, 75%, 0.1) 8px, 
-        hsla(20, 20%, 75%, 0.1) 16px
+        rgba(0, 0, 0, 0.0),
+        rgba(0, 0, 0, 0.0) 8px,
+        rgba(0, 0, 0, 0.1) 8px,
+        rgba(0, 0, 0, 0.1) 16px
     );
     background-clip: content-box;
-    background-size: 4px 22.62741699797px;
-    /* 16 * sqrt(2) */
-    transition: background 0.05s ease-in;
-    animation: 3000s linear 0s infinite running scrollbackground;
+    animation: 1000s linear 0s infinite running scrollbackground;
+    background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
 }
 
 pluto-cell.running > pluto-trafficlight {
     background: repeating-linear-gradient(
         -45deg,
-        hsla(20, 20%, 75%, 1), 
-        hsla(20, 20%, 75%, 1) 8px, 
-        hsla(20, 20%, 75%, 0.1) 8px, 
-        hsla(20, 20%, 75%, 0.1) 16px
+        rgba(0, 0, 0, 0.1),
+        rgba(0, 0, 0, 0.1) 8px,
+        rgba(0, 0, 0, 0.2) 8px,
+        rgba(0, 0, 0, 0.2) 16px
     );
     background-clip: content-box;
-    background-size: 4px 22.62741699797px;
-    /* 16 * sqrt(2) */
-    transition: background 0.05s ease-in;
     animation: 1000s linear 0s infinite running scrollbackground;
+    background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
 }
 
 pluto-cell.queued.errored > pluto-trafficlight {
     background: repeating-linear-gradient(
         -45deg,
-        hsla(0, 100%, 71%, 0.7),
-        hsla(0, 100%, 71%, 0.7) 8px,
-        hsla(12, 71%, 47%, 0.2) 8px,
-        hsla(12, 71%, 47%, 0.2) 16px
+        hsla(0, 70%, 80%, 0.7), 
+        hsla(0, 70%, 80%, 0.7) 8px, 
+        hsla(0, 70%, 80%, 0.05) 8px, 
+        hsla(0, 70%, 80%, 0.05) 16px
     );
     background-clip: content-box;
-    background-size: 4px 22.62741699797px;
-    /* 16 * sqrt(2) */
-    transition: background 0.05s ease-in;
-    animation: 3000s linear 0s infinite running scrollbackground;
+    animation: 1000s linear 0s infinite running scrollbackground;
+    background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
 }
 
 pluto-cell.running.errored > pluto-trafficlight {
     background: repeating-linear-gradient(
         -45deg, 
-        hsl(0, 100%, 71%), 
-        hsl(0, 100%, 71%) 8px, 
-        hsla(12, 71%, 47%, 0.33) 8px, 
-        hsla(12, 71%, 47%, 0.33) 16px
+        hsla(0, 100%, 80%, 1), 
+        hsla(0, 100%, 80%, 1)   8px, 
+        hsla(0, 70%,  80%, 0.7) 8px, 
+        hsla(0, 70%,  80%, 0.7) 16px
     );
     background-clip: content-box;
-    background-size: 4px 22.62741699797px;
-    /* 16 * sqrt(2) */
-    transition: background 0.05s ease-in;
     animation: 1000s linear 0s infinite running scrollbackground;
+    background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
 }
 
 @keyframes scrollbackground {
