--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -26,7 +26,7 @@ main {
     margin: 0 auto;
     margin-top: 80px;
     padding-bottom: 4rem;
-    padding-left: 29px;
+    padding-left: 25px;
     padding-right: 6px;
     align-content: center;
 }
@@ -639,7 +639,9 @@ pluto-output > assignee:empty {
 }
 
 pluto-output > div {
+    width: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
 }
 
 pluto-output.inline_output > div > pre {
@@ -780,8 +782,13 @@ pluto-shoulder > button {
     position: sticky;
     top: 0px;
     margin-top: 5px;
-    margin-right: 9px;
+    margin-right: 5px;
     padding: 0px 1px;
+}
+
+pluto-cell:focus-within > pluto-shoulder > button {
+    /* we use padding instead of 4px extra margin to move the eye to the left so that the hitbox becomes grows - you want to be able to double click the button */
+    padding-right: 4px;
 }
 
 /* pluto-cell.code_folded.inline-output > pluto-shoulder > button {
@@ -829,6 +836,7 @@ pluto-cell:focus-within > pluto-trafficlight {
     border-left-style: solid;
     margin-left: -4px;
     background-clip: content-box;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 pluto-cell.selected > pluto-trafficlight {
@@ -850,26 +858,14 @@ pluto-cell.errored > pluto-trafficlight {
 }
 
 pluto-cell.queued > pluto-trafficlight {
-    background: repeating-linear-gradient(
-        -45deg,
-        rgba(0, 0, 0, 0.0),
-        rgba(0, 0, 0, 0.0) 8px,
-        rgba(0, 0, 0, 0.1) 8px,
-        rgba(0, 0, 0, 0.1) 16px
-    );
+    background: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 8px, rgba(0, 0, 0, 0.1) 8px, rgba(0, 0, 0, 0.1) 16px);
     background-clip: content-box;
     animation: 1000s linear 0s infinite running scrollbackground;
     background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
 }
 
 pluto-cell.running > pluto-trafficlight {
-    background: repeating-linear-gradient(
-        -45deg,
-        rgba(0, 0, 0, 0.1),
-        rgba(0, 0, 0, 0.1) 8px,
-        rgba(0, 0, 0, 0.2) 8px,
-        rgba(0, 0, 0, 0.2) 16px
-    );
+    background: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 8px, rgba(0, 0, 0, 0.2) 8px, rgba(0, 0, 0, 0.2) 16px);
     background-clip: content-box;
     animation: 1000s linear 0s infinite running scrollbackground;
     background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
@@ -878,9 +874,9 @@ pluto-cell.running > pluto-trafficlight {
 pluto-cell.queued.errored > pluto-trafficlight {
     background: repeating-linear-gradient(
         -45deg,
-        hsla(0, 70%, 80%, 0.7), 
-        hsla(0, 70%, 80%, 0.7) 8px, 
-        hsla(0, 70%, 80%, 0.05) 8px, 
+        hsla(0, 70%, 80%, 0.7),
+        hsla(0, 70%, 80%, 0.7) 8px,
+        hsla(0, 70%, 80%, 0.05) 8px,
         hsla(0, 70%, 80%, 0.05) 16px
     );
     background-clip: content-box;
@@ -889,13 +885,7 @@ pluto-cell.queued.errored > pluto-trafficlight {
 }
 
 pluto-cell.running.errored > pluto-trafficlight {
-    background: repeating-linear-gradient(
-        -45deg, 
-        hsla(0, 100%, 80%, 1), 
-        hsla(0, 100%, 80%, 1)   8px, 
-        hsla(0, 70%,  80%, 0.7) 8px, 
-        hsla(0, 70%,  80%, 0.7) 16px
-    );
+    background: repeating-linear-gradient(-45deg, hsla(0, 100%, 80%, 1), hsla(0, 100%, 80%, 1) 8px, hsla(0, 70%, 80%, 0.7) 8px, hsla(0, 70%, 80%, 0.7) 16px);
     background-clip: content-box;
     animation: 1000s linear 0s infinite running scrollbackground;
     background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
